fixed button style on iOS devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -202,6 +202,7 @@ textarea {
 }
 
 .btn {
+    -webkit-appearance: none;
     background: #4aaaa5;
     color: #fff;
     padding: 10px 30px;
